fix: outline for focus visible

--- a/wp-content/themes/techcomfort/assets/scss/_global.scss
+++ b/wp-content/themes/techcomfort/assets/scss/_global.scss
@@ -18,13 +18,15 @@
 }
 
 * {
-  outline:     none;
   box-sizing:  border-box;
   margin:      0;
   padding:     0;
   font-family: 'Roboto', sans-serif;
   transition:  all linear 0.3s;
   color:       $black;
+  &:focus-visible {
+    outline: 2px solid $primaryColor !important;
+  }
 }
 
 html {
@@ -281,8 +283,8 @@ form {
     border:     1px solid $bgColor;
     font-size:  16px;
     padding:    15px;
-    &:focus {
-      border: 2px solid $primaryColor;
+    &:focus, &:focus-visible {
+      outline: 2px solid $primaryColor !important;
     }
   }
   .textarea {
